Recipe overflow fix

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,6 +5,10 @@
   align-items: center;
   justify-content: space-between;
 
+  @media only screen and (max-width: $bp-smallest) {
+    flex-direction: column;
+  }
+
   &__logo {
     margin-left: 4rem;
     height: 4.6rem;
@@ -15,6 +19,8 @@
     }
     @media only screen and (max-width: $bp-smallest) {
       height: 6.6rem;
+
+      margin: 1rem auto 0 auto;
     }
   }
 }
@@ -49,7 +55,7 @@
     }
 
     @media only screen and (max-width: $bp-medium) {
-      width: auto;
+      width: 25rem;
 
       // &::placeholder {
       //   color: white;
@@ -57,16 +63,12 @@
     }
 
     @media only screen and (max-width: $bp-mediumer) {
-      width: 25vw;
+      width: 25rem;
     }
 
     @media only screen and (max-width: $bp-smallest) {
-      width: 40vw;
+      width: 25rem;
     }
-  }
-
-  @media only screen and (max-width: $bp-smallest) {
-    padding-left: 3rem;
   }
 
   &__btn {
@@ -172,23 +174,5 @@
   .nav__btn--bookmarks:hover + & {
     visibility: visible;
     opacity: 1;
-  }
-}
-
-@media only screen and (max-width: $bp-smallest) {
-  body {
-    max-width: calc(100vw);
-  }
-
-  .container {
-    width: 100%;
-  }
-
-  .header {
-    flex-direction: column;
-
-    &__logo {
-      margin: 1rem auto 0 auto;
-    }
   }
 }
